# grimgal

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
grimgal/: CMakeLists.txt  grimgal.qrc
grimgal/form/: addmeasurmentwizard.ui  mainwindow.ui  settings_dialog.ui
grimgal/src/: main.cpp
grimgal/src/data/: configuration.h  measurement.cpp  measurement.h  probe.cpp  probe.h  project.cpp  project.h
grimgal/src/eventfilter/probeview/: removeprobe.cpp  removeprobe.h
grimgal/src/form/: mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h
grimgal/src/model/: eventtablemodel.cpp  eventtablemodel.h  measurementtreemodel.cpp  measurementtreemodel.h  probetablemodel.cpp  probetablemodel.h  propertytablemodel.cpp  propertytablemodel.h  settings_dialog_color_model.cpp  settings_dialog_color_model.h  statistictablemodel.cpp  statistictablemodel.h
grimgal/src/model/property/: iproperty.h  measurment_file.h  measurment_name.h  meta_comment.h  meta_line_color.h  meta_line_type.h  sensor_name.h  sensor_offset_x.h  sensor_offset_y.h  sensor_samplerate.h  sensor_unit.h
grimgal/src/util/: number_format.cpp  number_format.h
grimgal/src/widget/: customqglwidget.cpp  customqglwidget.h
